Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4806

%{buildDir} validation is broken in custom build steps

XMLWordPrintable

    • 4c8fbf5987dca97eb2e13efe90fe4dc2d0ae25bc

      Having installed Qt Creator 2.2 on Windows 7, Ubuntu 11.04 32-bit and Mac OS X 10.6, I wanted to define a custom process step in the build steps. Using CMake for my project, I used to have a custom process step for which the working directory used to be ${BUILDDIR}/build. However, if I use that with Qt Creator 2.2, then it fails (everything works fine with Qt Creator 2.1 and this on all three platforms).

      Just for information, if I create a new custom process step, the default working directory is %

      {buildDir}

      (on all three platforms) and is in red (telling me that it's not a valid directory). If I replace the % with a $, then the text is rendered in black (telling me it's a valid directory), yet it won't work as I expect. Instead, Qt Creator 2.2.0 will create a folder called ${BUILDDIR} (!!).

      There is clearly an easy workaround which consists of entering the exact full path for the working directory. Still, I can't see why it used to work in Qt Creator 2.1.0 and not anymore in Qt Creator 2.2.0 (regression?).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            buddenha Oswald Buddenhagen
            agarny Alan Garny
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes