don't validate working directory of custom process steps

amends 64cfa46

Task-number: QTCREATORBUG-4806
Reviewed-by: dt