src/plugins/projectexplorer/processstep.cpp
@@ -258,6 +258,7 @@ ProcessStepConfigWidget::ProcessStepConfigWidget(ProcessStep *step)
 {
     m_ui.setupUi(this);
     m_ui.command->setExpectedKind(Utils::PathChooser::Command);
+    m_ui.workingDirectory->setExpectedKind(Utils::PathChooser::Directory);
     connect(m_ui.command, SIGNAL(changed(QString)),
             this, SLOT(commandLineEditTextEdited()));
     connect(m_ui.workingDirectory, SIGNAL(changed(QString)),
